--- a/assignment3/css/general.css
+++ b/assignment3/css/general.css
@@ -35,14 +35,43 @@ body {
     padding: 0;
 }
 
-header {
-    background-color: #6ACBDF;
+.logo {
+  margin:0;
+  display:block;
+  padding-top: 8px;
 }
 
-.logo {
-  margin: 0 auto;
-  display:block;
-  padding-top: 10px;
+.billboard {
+    overflow: hidden;
+    background-image:url(../images/bangle.JPG);
+    background-color: black;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 40rem;
+}
+
+h1 {
+    margin: 8rem 0;
+    text-align: right;
+    color: white;
+    font-weight:lighter;
+    font-size: 3.25rem;
+    font-family: 'great vibes', cursive;
+    padding: 0 5%;
+    letter-spacing: .1rem;
+}
+
+article {
+    margin: 0;
+    padding: 1rem 5%;
+}
+
+h2{ 
+    text-align:center;
+    margin:0;
+    padding: 0;
+    font-family: great vibes, cursive;
+    color: 3A5CAC;
 }
 
 .nav-top {
@@ -76,16 +105,6 @@ header {
     background-color: #666;
 }
 
-article {
-    margin: 0;
-    padding: 1.5rem 5%;
-}
-
-h1 {
-    margin: 0 0 1.5rem;
-    padding: 0;
-    font-size: 2rem;
-}
 
 figure {
     margin: 0 auto 1.5rem;
@@ -98,6 +117,8 @@ figure a:visited {
     font-size: .875rem;
     color: black;
     text-decoration: none;
+    background-color:#6ACBDF;
+    border-radius: px;
 }
 
 footer {
